--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,39 +22,56 @@ body{
 	justify-content:center;
 }
 
+.search{
+	border-bottom:2px solid white;
+}
+
+.searchIcon{
+	height:20px;
+	width:20px;
+}
+
 input{
     border: 0px solid #000000;
-    border-bottom-width: 2px;
     background-color: transparent;
     color:black;
 }
 
 
 .navContent{
-	display:flex;
-	flex-direction:column;
 	width:100%;
 	height:100%;
 	background-color:black;
+	padding-bottom:75px;
 }
 .navLinks{
 	list-style:none;
-	padding:10px;
+	padding:0px;
+	margin-bottom:0px;
 }
 
 .sectionTitle{
 	color:#655E5E;
-	margin-left:30px;
-	margin-top:7px;
+	padding-top:20px;
+	margin:0px 7px 7px 30px;
+	font-family:Arial;
+	font-size:12px;
+	font-weight:bold;
 }
 
 .navigation{
 	padding-bottom:5px;
 }
 
+.navigation.navigation--modified{
+	background-color:#202B2B;
+}
+
 .navigation__link{
 	margin:5px;
 	color:white;
+	font-family:Arial;
+	font-size:13px;
 }
 
 .navigation__icon{
@@ -75,17 +92,22 @@ input{
 .header{
 	display:flex;
 	width:100%;
-	flex-flow:space-between;
+	justify-content:space-between;
+	height:75px;
 }
 
 .pageTitle{
 	font-family: Helvetica,Arial;
 	font-size: 22px;
+	margin-left:15px;
 }
 
 .sortLinksContainer{
 	display:flex;
 	align-items:center;
+	font-family:Arial;
+	font-size:12px;
+	color:#DFE5E5;
 }
 
 .sortLinks{
@@ -96,14 +118,16 @@ input{
 	padding-right:5px;
 }
 
+.sortLinks__item.sortLinks__item--modified{
+	color:#89DADA;
+}
+
 .icons{
 	display:flex;
-	float:right;
+	align-items:center;
+	margin-right:25px;
 }
-.refreshIcon{
-	height:20px;
-	width:20px;
-}
+
 .movie{
 	font-family: Arial;
 	font-size:12px;
@@ -122,10 +146,8 @@ input{
 }
 
 .chatContent{
-	display:flex;
-	flex-direction:column;
 	width:100%;
-	height:89%;
+	height:100%;
 	background-color: #E3E3E3;
 }
 
@@ -133,11 +155,27 @@ input{
 	float: left;
 	padding-left:10px;
 	margin:5px;
-	border-radius:80%;
+	border-radius:50%;
 }
 
 .chat__userName{
 	margin-top:10px;
+	font-family:Tahoma;
+	font-size:12px;
+	font-weight:bold;
+}
+
+.chat__movie{
+	font-family:Arial;
+	font-size:11px;
+}
+
+.chat__status{
+	height:8px;
+	width:8px;
+	float:right;
+	padding-right:20px;
+	padding-bottom:10px;
 }
 
 .user{
@@ -148,10 +186,29 @@ input{
 	height:75px;
 }
 
+.user__userName{
+	font-family:Arial;
+	font-size:12px;
+	font-weight:bold;
+	color:white;
+}
+
+.user__picture{
+	margin:5px;
+	border-radius:50%;
+}
+
+.user__status{
+	height:8px;
+	width:8px;
+	margin-left:8px;
+}
+
 .chatSearch{
 	background-color:#C8D2D2;
 	display:flex;
 	align-items:center;
 	justify-content:center;
 	height:75px;
+	width:100%;
 }
